--- a/.github/workflows/fourth-action.yml
+++ b/.github/workflows/fourth-action.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Ichiroku Get Source
         uses: actions/checkout@v3
       - name: Ichiroku Install Node
-        uses: action/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Ichiroku Install Dep, Do Test, Lint Check
