--- a/.github/workflows/fourth-action.yml
+++ b/.github/workflows/fourth-action.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           cd app2
           npm ci
-          npm lint
+          npm run lint
           npm test
     
   
