--- a/.github/workflows/fourth-action.yml
+++ b/.github/workflows/fourth-action.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           cd app2
           npm ci
+          npm init @eslint/config
           npm run lint
           npm test
     
