--- a/.github/workflows/fourth-action.yml
+++ b/.github/workflows/fourth-action.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: Ichiroku Get Source
         uses: actions/checkout@v3
+      - name: Ichiroku Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
       - name: Ichiroku Install Dep, Do Test, Lint Check
         run: |
           cd app2
